added 'add' feature
